--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "emacs-livedown"]
-	path = emacs-livedown
+[submodule "modules/emacs-livedown"]
+	path = modules/emacs-livedown
 	url = https://github.com/shime/emacs-livedown.git
