--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modules/emacs-livedown"]
-	path = modules/emacs-livedown
-	url = https://github.com/shime/emacs-livedown.git
+[submodule "site-lisp/emacs-livedown"]
+	path = site-lisp/emacs-livedown
+	url = git@github.com:shime/emacs-livedown.git
