--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "site-lisp/emacs-livedown"]
-	path = site-lisp/emacs-livedown
-	url = git@github.com:shime/emacs-livedown.git
+        path = site-lisp/emacs-livedown
+        url = https://github.com/shime/emacs-livedown.git
