Get tmux to use the clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,9 +17,8 @@ bind r source-file ~/.tmux.conf
 set -g mouse on
 
 # Add clipboard feature
-# bind-key -T copy-mode '[' send-keys -X copy-pipe-and-cancel "clipboard-copy"
-# if-shell '[ "$(uname -s)" = "Darwin" ]' \
-#   "set-option -g default-command 'reattach-to-user-namespace -l zsh'"
+bind-key -T copy-mode C-w send-keys -X copy-pipe-and-cancel clipboard-copy
+bind-key -T copy-mode M-w send-keys -X copy-pipe-and-cancel clipboard-copy
 
 # Zoom and unzoom shortcuts for easier clipboard copying
 unbind +
