--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site-lisp/emacs-livedown"]
 	path = emacs.d/site-lisp/emacs-livedown
         url = https://github.com/shime/emacs-livedown.git
+[submodule "emacs.d/site-lisp/html5-el"]
+	path = emacs.d/site-lisp/html5-el
+	url = https://github.com/hober/html5-el.git
