Add tmux resurrect and continuum plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,4 +25,8 @@ set -g @yank_selection_mouse 'clipboard'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/double/cyan'
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-boot 'on'
+
 run '~/.tmux/plugins/tpm/tpm'
