--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection 'clipboard'
 set -g @yank_selection_mouse 'clipboard'
 
 set -g @plugin 'jimeh/tmux-themepack'
