Set tmux default terminal

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,8 @@ bind c new-window -c "#{pane_current_path}"
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
+set -g default-terminal "tmux-256color"
+
 # Enable mouse scroll
 set -g mouse on
 
