--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -7,34 +7,64 @@ font:
   size: 10
 
 
+# colors:
+#   primary:
+#     background: '#333333'
+#     foreground: '#ffffff'
+
+#     bright_foreground: '#ffffff'
+#     bright_background: '#555555'
+
+#   cursor:
+#     text:    '#000000'
+#     cursor:  '#00ff00'
+
+#   normal:
+#     black:   '#4d4d4d'
+#     red:     '#bb0000'
+#     green:   '#98f898'
+#     yellow:  '#f0e68c'
+#     blue:    '#96853f'
+#     magenta: '#ffdead'
+#     cyan:    '#ffa0a0'
+#     white:   '#f5deb3'
+
+#   bright:
+#     black:   '#555555'
+#     red:     '#ff5555'
+#     green:   '#55ff55'
+#     yellow:  '#ffff55'
+#     blue:    '#87ceeb'
+#     magenta: '#ff55ff'
+#     cyan:    '#ffd700'
+#     white:   '#ffffff'
+
+# Colors (Zenburn)
 colors:
-  primary:
-    background: '#333333'
-    foreground: '#ffffff'
-
-    bright_foreground: '#ffffff'
-    bright_background: '#555555'
-
-  cursor:
-    text:    '#000000'
-    cursor:  '#00ff00'
-
-  normal:
-    black:   '#4d4d4d'
-    red:     '#bb0000'
-    green:   '#98f898'
-    yellow:  '#f0e68c'
-    blue:    '#96853f'
-    magenta: '#ffdead'
-    cyan:    '#ffa0a0'
-    white:   '#f5deb3'
-
   bright:
-    black:   '#555555'
-    red:     '#ff5555'
-    green:   '#55ff55'
-    yellow:  '#ffff55'
-    blue:    '#87ceeb'
-    magenta: '#ff55ff'
-    cyan:    '#ffd700'
-    white:   '#ffffff'
+    black: '#709080'
+    blue: '#94bff3'
+    cyan: '#93e0e3'
+    green: '#c3bf9f'
+    magenta: '#ec93d3'
+    red: '#dca3a3'
+    white: '#ffffff'
+    yellow: '#e0cf9f'
+  cursor:
+    cursor: '#73635a'
+    text: '#000000'
+  normal:
+    black: '#4d4d4d'
+    blue: '#506070'
+    cyan: '#8cd0d3'
+    green: '#60b48a'
+    magenta: '#dc8cc3'
+    red: '#705050'
+    white: '#dcdccc'
+    yellow: '#f0dfaf'
+  primary:
+    background: '#3f3f3f'
+    foreground: '#dcdccc'
+  selection:
+    background: '#21322f'
+    text: '#c2d87a'
