--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
+# Needed for wayland
+# set -g @override_copy_command 'wl-copy'
 set -g @yank_selection 'clipboard'
 set -g @yank_selection_mouse 'clipboard'
 
